hero dark mode and container bug

--- a/src/assets/styles/helpers.scss
+++ b/src/assets/styles/helpers.scss
@@ -109,6 +109,6 @@ $breakpoints: (
     margin: 120px 0 130px;
 }
 
-.m-0 {
-    padding: 0;
+.pl-0 {
+    padding-left: 0;
 }
