--- a/src/assets/styles/pages/Home.scss
+++ b/src/assets/styles/pages/Home.scss
@@ -175,7 +175,7 @@
     .r-inverted {
         @include letter;
         background-image: url('../../images/hero-title/r-inverted.png');
-        width: 120px;
+        width: 123px;
     }
     .s-inverted {
         @include letter;
